Input file documentation updated

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -166,6 +166,13 @@ initialDimensions = 100 100 100
 #    seeds were equal 1234. The resulting phase is Col_h phase along x axis with random flips.
 initialArrangement = sc default
 
+# If specified, walls will be created on both opposite box faces intersected by specified axes. For example, using
+# "xy" in a cubic box with side length L creates walls described by equations: x=0, x=L, y=0 and y=L. Leaving the field
+# empty or skipping it leaves the simulation box without any walls. Please note that placing a wall does not turn off
+# the scaling in this direction. If one intends so, it has to be done manually when specifying "scalingType" (see
+# below).
+walls =
+
 # The number of molecules to be simulated
 numOfParticles = 1000
 
@@ -193,45 +200,55 @@ numOfParticles = 1000
 #    1 / "[flip every]" fraction of particles is flipped (if not specified, "[flip every]" defaults to 10).
 moveTypes = translation 10
 
-# The maximal size of the volume move and the type of the scaling. Notice that some types allow independent moves for
-# some or all sides which allows to relax the diagonal part of stress tensor (directional pressures). Alternatives for
-# "scalingType":
+# Type of the scaling. Notice that some types allow independent moves for some or all sides which facilitate relaxation
+# of the diagonal part of stress tensor (directional pressures) or even full triclinic relaxation of sheer pressure.
+# If "scalingType" is variant 1.-3. and the box is triclinic, scaling is performed height-wise, ie. face angles remain
+# unaltered. Alternatives for "scalingType":
 # 1. "delta V"
-#    The ratio of all box sides remains constant while the volume is changed by an amount sampled from
-#    [-"volumeStepSize", "volumeStepSize"] interval
-# 2. "linear [variant-dependent parameters]"
-#    instead of the volume, it perturbs the box side lengths by a value from a uniformly sampled interval
-#    [-"volumeStepSize", "volumeStepSize"]. The perturbation for each side may be independent or not, depending on the
-#    variant:
-#    2.1. "linear isotropic"
-#         All dimensions are changed using the same random number. Note, however, that the ratio of side lengths remains
-#         constant only for a cubic box.
-#    2.2. "linear anisotropic [axes]"
-#         If "[axes]" is on of: "x", "y" or "z", the side length corresponding to this axis will be perturbed using a
-#         different (independent) random number for than the two other axes. If "[axes]" is "xyz", all three sides will
-#         be perturbed independently.
-# 3. "(independent) log [variant-dependent parameters]"
-#    All side lengths are scaled by multiplication by a factor instead of addition. The factor is sampled \
-#    logarithmically - first a number x_alpha is sampled uniformly from [-"volumeStepSize", "volumeStepSize"] interval.
-#    Then, the scaling factor is calculated as exp(x_alpha). Scaling factor for each side may be independent of not
-#    depending on the variant.
-#    3.1. "log isotropic"
-#         All sides are scaled by the same factor.
-#    3.2. "log anisotropic [axis]"
-#         If "[axis]" is "x", "y" or "z", this axis is scaled by a different factor than two other. If "[axis]" is
-#         "xyz", all three axes are scaled by three independent factors. In either case all axes are scaled
-#         simultaneously.
-#    3.2. "independent log anisotropic [axis]"
-#         Similar as 3.2, but independent scaling directions (as specified by "[axis]") are scaled one at a time. For
-#         example "independent log anisotropic x" means that either: x axis is scaled and y, z are unaltered, or y and z
-#         are scaled and x is unaltered - both options with the same probability. "independent log anisotropic xyz"
-#         means scaling one side at a time.
-# 4. "(independent) delta triclinic"
+#    The ratio of all box heights remains constant while the volume is changed by an amount sampled from
+#    [-"volumeStepSize", "volumeStepSize"] interval uniformly
+#
+# 2. "(independent) [scaling distribution] [direction specification]"
+#    Generalized scaling, where one can customize type of the scaling, which directions should be scaled, which should
+#    be coupled, whether scaling is performed in one direction per move or all together, etc.
+#
+#    "[scaling distribution]" can be one of:
+#    2.1.1. "linear"
+#           Linear scaling is achieved by sampling uniformly a random number from [-"volumeStepSize", "volumeStepSize"]
+#           interval and changing appropriate box heights by this amount.
+#    2.1.2. "log"
+#           Logarithmic scaling is achieved by sampling uniformly a random number "w" from
+#           [-"volumeStepSize", "volumeStepSize"] interval and multiplying appropriate box heights by a factor exp(w).
+#
+#    "[direction specification]" describes direction ("x", "y" and "z") in which scaling should be performed in
+#    accordance to "[scaling distribution]". By default, all directions are uncoupled, so using "xyz" gives fully
+#    anisotropic scaling where all directions are scaled independently. Coupling is achieved by surrounding coupled
+#    directions by parentheses "(...)". For example "(zx)y" makes "y" independent direction, while "x" and "z" are
+#    scaled together. One or more directions can be blocked by surrounding them with square brackets "[...]". For
+#    example "xy[z]" specifies uncoupled scaling of "x" and "y" directions and "z" remains unaltered. Please note that
+#    the behaviour of all directions has to be given explicitly, thus, for example "(xy)" is malformed, since "z" is
+#    missing. Apart from generalized syntax with "x", "y", "z", "(...)" and "[...]", a few expressive shortcuts are
+#    available:
+#    2.2.1. "isotropic"        => equivalent to "(xyz)"
+#    2.2.2. "anisotropic x"    => equivalent to "x(yz)"
+#    2.2.3. "anisotropic y"    => equivalent to "y(zx)"
+#    2.2.4. "anisotropic z"    => equivalent to "z(xy)"
+#    2.2.5. "anisotropic xyz"  => equivalent to "xyz"
+#
+#    "independent" is an optional switch. By default, scaling is performed in all directions at once. For example, for
+#    "(xy)z" one scaling factor is sampled for "x" and "y" directions and a different, independent one is sampled for
+#    "z" direction, however scaling in all directions is performed at once. If "independent" is included, only one
+#    uncoupled direction is selected at random during volume move. Staying with "(xy)z" example, either both "x" and "y"
+#    will be scaled in a coupled manner and "z" unscaled, or "x" and "y" unaltered, and "z" scaled.
+#
+# 3. "(independent) delta triclinic"
 #    Box side vectors are translated by random vectors with coordinates sampled uniformly from
 #    [-"volumeStepSize", "volumeStepSize"] interval. This scaling types enables to perform simulations in
 #    isobaric-isotension ensemble (relaxing off-diagonal parts of stress tensor). If "independent" is specified, only a
 #    single, randomly sample side will be perturbed. Otherwise, all are perturbed at once.
 scalingType = delta V
+
+# The maximal size of the volume move. Its meaning is dependent on scaling type. Please refer to "scalingType" above.
 volumeStepSize = 1000
 
 # The seed for random number generator
@@ -286,7 +303,7 @@ seed = 1234
 #    "[large radius]" are radii of, respectively, the first and the last sphere (usually the last one is larger).
 #    "[penetration]" describes how much spheres overlap. In particular, 0 means that the spheres are tangent.
 #    ---- same as for "Sphere", however each pair of beads is treated separately
-# 6. "PolyspherocylinderBanana [arc radius] [arc angle] [number of segments] [radius] ([subdivisions])"
+# 7. "PolyspherocylinderBanana [arc radius] [arc angle] [number of segments] [radius] ([subdivisions])"
 #    a molecule similarly shaped as "PolysphereBanana", but using spherocylinders. "[arc radius]" and "[arc angle]" have
 #    identical meaning as in "PolysphereBanana", "[radius]" is the radius of spherocylinders' caps (equivalently their
 #    half-width). "[number of segments]" is a number of spherocylinders used to approximate the arc - the arc is divided
