Input file documentation update

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -258,7 +258,9 @@ seed = 1234
 # axis ratio are given by "shapeAttributes". Each shape may support one ore more interaction types. A full list of
 # shapes, together with their attributes and interactions is given below. "shapeName" is presented together with
 # "shapeAttributes" in the format "[shape name] (shape attributes)". For each list entry (a single shape) all supported
-# interaction are shown as a sublist.
+# interaction are shown as a sublist. Moreover, each shape declares a set of the so-called named points, which are
+# some features, like origins of constituent spheres, ect. By default, each shape defines two named points - "cm" for
+# center of mass and "o" for geometric origin. Non-standard, if present, one are described for each shape separately.
 # 1. "Sphere [radius]"
 #    sphere with a radius "[radius]". Supported interaction types:
 #    1.1. "hard"
@@ -280,10 +282,14 @@ seed = 1234
 #    "[length]". For the default orientation, "Spherocylinder" is aligned with x axis. Supported interactions:
 #    2.1. "hard"
 #         hard-core interaction
+#    It defines two additional named points: "beg" and "end" for origins of caps of the spherocylinder.
 # 3. "KMer [number of spheres] [radius] [distance]"
 #    a linear chain of "[number of spheres]" spheres with radius "[radius]". The centers are equally spaced with a
 #    distance "[distance]". Supported interactions:
 #    ---- same as for "Sphere", however each pair of beads is treated separately
+#    It defines some additional named points. First group are ones inherited from Polysphere, namely "s[x]", where "[x]"
+#    is an index of a single sphere (starting from 0) describing their origins. Second group is KMer-specific: "beg"
+#    and "end" for the first and the last sphere's origin.
 # 4. "PolysphereBanana [arc radius] [arc angle] [number of spheres] [sphere radius]"
 #    chain of "[number of spheres]" spheres with radius "[sphere radius]" placed on an arc (banana-shaped). The arc is
 #    defined by its radius "[arc radius]" and arc angle "[arc angle]". The centres of spheres are equidistantly placed
@@ -292,17 +298,27 @@ seed = 1234
 #    arc) is y axis and the arc is bent towards the negative x semi-axis (the vector joining either endpoint and the
 #    middle has a negative x component). Supported interactions:
 #    ---- same as for "Sphere", however each pair of beads is treated separately
+#    It defines some additional named points. First group are ones inherited from Polysphere, namely "s[x]", where "[x]"
+#    is an index of a single sphere (starting from 0) describing their origins. Second group is
+#    PolysphereBanana-specific: "beg" and "end" for the first and the last sphere's origin.
 # 5. "PolysphereLollipop [num of spheres] [small radius] [large radius] [small penetration] [large penetration]"
 #    linear chain of "[num of spheres]" spheres, where a single sphere at the end has different size than the rest of
 #    them (usually larger). "[small radius]" and "[large radius]" are radii of, respectively, all apart from the last,
 #    and the last sphere. Similarly, "[small penetration]" and "[large penetration]" describe how much spheres overlap.
 #    In particular, 0 means that the spheres are tangent.
 #    ---- same as for "Sphere", however each pair of beads is treated separately
+#    It defines some additional named points. First group are ones inherited from Polysphere, namely "s[x]", where "[x]"
+#    is an index of a single sphere (starting from 0) describing their origins. Second group is
+#    PolysphereLollipop-specific: "ss" and "sl" for origins of, respectively, the first small sphere at the beginning
+#    and the large sphere.
 # 6. "PolysphereWedge [num of spheres] [small radius] [large radius] [penetration]"
 #    linear chain of "[num of spheres]" spheres, where radii of spheres are increased linearly. "[small radius]" and
 #    "[large radius]" are radii of, respectively, the first and the last sphere (usually the last one is larger).
 #    "[penetration]" describes how much spheres overlap. In particular, 0 means that the spheres are tangent.
 #    ---- same as for "Sphere", however each pair of beads is treated separately
+#    It defines some additional named points. First group are ones inherited from Polysphere, namely "s[x]", where "[x]"
+#    is an index of a single sphere (starting from 0) describing their origins. Second group is
+#    PolysphereWedge-specific: "ss" and "sl" for origins of, respectively, the smallest sphere and the largest one.
 # 7. "PolyspherocylinderBanana [arc radius] [arc angle] [number of segments] [radius] ([subdivisions])"
 #    a molecule similarly shaped as "PolysphereBanana", but using spherocylinders. "[arc radius]" and "[arc angle]" have
 #    identical meaning as in "PolysphereBanana", "[radius]" is the radius of spherocylinders' caps (equivalently their
@@ -313,6 +329,11 @@ seed = 1234
 #    (no divisions). Supported interactions:
 #    6.1. "hard"
 #         hard-core repulsion of each pair of spherocylinders
+#    It defines some additional named points. First group are ones inherited from Polyspherocylinder, namely "o[x]",
+#    "b[x]", and "e[x]", where "[x]" is an index of a single spherocylinder (starting from 0) and "o", "b" and "e" stand
+#    for its, respectively, origin, first cap's origin and last cap's origin. Second group is
+#    PolyspherocylinderBanana-specific: "beg" is the origin of the first cap at the beginning of the banana, and "end",
+#    similarly, for the last cap.
 shapeName = Sphere
 shapeAttributes = 0.5
 interaction = hard
@@ -494,14 +515,19 @@ recordingFilename = recording_gas.ramtrj
 #         (only if "dumpQTensor" specified) matrix element (2, 3) of Q-tensor; INTERVAL VALUE
 #    7.7. "Q_33"
 #         (only if "dumpQTensor" specified) matrix element (3, 3) of Q-tensor; INTERVAL VALUE
-# 8. "smecticOrder ([n_x max] [n_y max] [n_z max]) (dumpTauVector)"
-#    absolute value of smectic tau parameter (normalized by number density - 1 means maximal smectic order). The
-#    tau value depends on the wavevector of smectic order parameter. Here, the one giving the highest value of taus
-#    is selected from all PBC-compatible alternatives given by:
+# 8. OLD SYNTAX
+#    "smecticOrder ([n_x max] [n_y max] [n_z max]) (dumpTauVector)"
+#    NEW SYNTAX
+#    "smecticOrder (max_n {[n_x=n_y=n_z] | [n_x max] [n_x max] [n_x max]}) (dumpTauVector) (focalPoint [point name])"
+#    absolute value of smectic tau parameter (not normalized by number density - (num of particles)/volume means maximal
+#    smectic order). The tau value depends on the wavevector of smectic order parameter. Here, the one giving the
+#    highest value of taus is selected from all PBC-compatible alternatives given by:
 #    k = sum_alpha (n_alpha * g_alpha),
-#    where g_alpha are reciprocal lattice vectors (which the box being the unit cell), while n_alpha are Miller indices
-#    taken from [-"[n_alpha max]", "[n_alpha max]"] - the maximal length of the wavevector is controlled by an optional
-#    parameter "[n_alpha max]". If it is not specified, it defaults to 5. Constituent values:
+#    where g_alpha (alpha = x, y, z) are reciprocal lattice vectors (which the box being the unit cell), while n_alpha
+#    are Miller indices taken from [-"[n_alpha max]", "[n_alpha max]"] - the maximal length of the wavevector is
+#    controlled by an optional parameter "[n_alpha max]". If it is not specified, it defaults to 5. New syntax lets user
+#    choose which point should be used to calculate smectic order. If not specified, it defaults to mass centre "cm".
+#    Constituent values:
 #    8.1. "tau"
 #         absolute value of smectic order parameter; INTERVAL VALUE
 #    8.2. "k_x"
@@ -510,9 +536,13 @@ recordingFilename = recording_gas.ramtrj
 #         (only if "dumpTauVector" specified) x coordinate of the wavevector of smectic order parameter; INTERVAL VALUE
 #    8.4. "k_z"
 #         (only if "dumpTauVector" specified) x coordinate of the wavevector of smectic order parameter; INTERVAL VALUE
-#    8.5. "k_tau"
-#         the wavevector of smectic order parameter in the format "[n_x].[n_y].[n_z]"; NOMINAL VALUE
-# 9. "bondOrder [Miller indices] [rank 1] [rank 2] ..."
+#    8.5. "n_tau"
+#         Miller indices of smectic order parameter in the format "[n_x].[n_y].[n_z]"; NOMINAL VALUE
+# 9. OLD SYNTAX
+#    "bondOrder [Miller indices] [rank 1] [rank 2] ..."
+#    NEW SYNTAX
+#    "bondOrder millerIdx [nx].[ny].[nz] ranks [rank 1] [rank 2] ... (layeringPoint [layering point name]) \
+#     (bondOrderPoint [bond order point name])"
 #    bond order parameter of a given rank "r" is computed by finding "r" nearest neighbours of a molecule, projecting
 #    the vectors joining the molecule with neighbours onto the plane given by "[Miller indices]" with respect to the
 #    simulation box, computing angles phi_j (j is the index of a neighbour) between the projections and an arbitrary
@@ -521,7 +551,10 @@ recordingFilename = recording_gas.ramtrj
 #    Nearest neighbours are also calculated using a projection onto a nearest smectic layer defined by
 #    "[Miller indices]" (layer association is done using complex phase of the smectic parameter). Finally, the absolute
 #    value of psi_r is averaged over all molecules in the system. "[Miller indices]" should be in format "[h].[k].[l]"
-#    (negative values are allowed). At least one rank should be given. Constituent values:
+#    (negative values are allowed). At least one rank should be given. New syntax enables user to change which point
+#    is used to assign molecules into layers ("[layering point name]") and which is used to find nearest neighbours and
+#    calculate bond order ("[bond order point name]"). Both default to mass centre "cm".
+#    Constituent values:
 #    9.x. "psi[rank]"
 #         bond order parameter of rank "[rank]". There are as many of them as specified; INTERVAL VALUE
 # 10. "rotationMatrixDrift"
