integration.ini documentation update

--- a/sample_inputs/integration.ini
+++ b/sample_inputs/integration.ini
@@ -435,6 +435,10 @@ outputFilename = out.txt
 # of observables.
 observableSnapshotFilename = observable_gas.txt
 
+# Pattern used to create file names for bulk observables (see below). Each "{}" is replaced with a name of the
+# observable. If "{}" is not found, "_{}.txt" is appended at the end and replacing process is redone.
+bulkObservableFilenamePattern = {}_gas.txt
+
 # If not empty, trajectories of the particles will be stored in a compact binary RAMTRJ format. It then can be replayed
 # for example to calculate different observables. Not all cycles are stored - it is done every "snapshotEvery" cycles.
 recordingFilename = recording_gas.ramtrj
@@ -576,6 +580,41 @@ recordingFilename = recording_gas.ramtrj
 #          the pressure; INTERVAL VALUE
 observables = numberDensity , inline packingFraction , compressibilityFactor
 
+# Observables with many values (for example whole plots), which are too large to be normal observables. They can however
+# be averaged over many system snapshots. Averaging of them is done in the averaging phase of the simulation, every
+# "averagingEvery" cycles. At the end, the result is dumped into a dedicated file given by
+# "bulkObservableFilenamePattern" (supplemented with the observable's name in place of "{}"). One may specify more than
+# one bulk observable separating them using comma ",". Available bulk observables:
+# 1. "pairDensityCorrelation [max distance] [num bins] [binning specification]"
+#    Pair density correlation vs distance (a ratio of the actual number of molecules in the packing with a given
+#    distance to the expected number of molecules assuming the packing is homogeneous). In that way:
+#    * rho(r) = 1  => no correlation at distance r
+#    * rho(r) < 1  => negative correlation at distance r
+#    * rho(r) > 1  => positive correlation at distance r
+#    Observable is sampled for distances in the range [0, "[max distance]"]. "[binning specification]" describes which
+#    pairs are selected and how the distance is calculated. Variants:
+#    1.1. "radial ([focal point])
+#         All pairs are sampled and the distance is just an ordinary Euclidean distance. Produces a standard radial
+#         distribution function. "[focal point]" describes which named point should be used and defaults to mass center
+#         "cm". "[binning signature name]" := "r".
+#    1.2. "layerwiseRadial [h].[k].[l] ([focal point])"
+#         First, the system if divided into layers, calculated based on the smectic order parameter for Miller indices
+#         "[h]", "[k]", "[l]". Then, pairs are selected only from within the layer (subject to PBC) and distance is
+#         computed along the layer plane. "[focal point]" describes which named point should be used and defaults to
+#         mass center "cm". "[binning signature name]" := "lr"
+#    Observable name is "rho_[binning signature name]", where "[binning signature name]" depends on
+#    "[binning specification]".
+# 2. "pairAveragedCorrelation [max distance] [num bins] [correlation function] [binning specification]"
+#    Average value of correlation function vs the distance between molecules. "[max distance]", "[num bins]" and
+#    "[binning specification]" have exactly the same meaning as in 1. "pairDensityCorrelation". "[correlation function]"
+#    specifies which correlation function should be calculated. Available variants:
+#    2.1. "S110 [axis]"
+#         S_110 correlation function, defined as the dot product of the axes of molecules. "[axis]" can be "primary" or
+#         "secondary" and specifies which molecular axis should be used. "[function signature name]" := "S110"
+#    Observable name is "[function signature name]_[binning signature name]", where "[function signature name]" depends
+#    on the chosen function and "[binning signature name]" on binning specification.
+bulkObservables = pairDensityCorrelation 5 100 radial
+
 # This is the end of parameters for "gas" run. Next ones are for subsequent "liquid" and "solid" runs. They have
 # identical meaning, so the descriptions are not repeated.
 
@@ -590,8 +629,10 @@ packingFilename = packing_liquid.dat
 wolframFilename = packing_liquid.nb
 outputFilename = out.txt
 observableSnapshotFilename = observable_liquid.txt
+bulkObservableFilenamePattern = {}_liquid.txt
 recordingFilename = recording_liquid.ramtrj
 observables = numberDensity , inline packingFraction , compressibilityFactor
+bulkObservables = pairDensityCorrelation 5 100 radial
 
 [integration.solid]
 temperature = 1
@@ -604,5 +645,7 @@ packingFilename = packing_solid.dat
 wolframFilename = packing_solid.nb
 outputFilename = out.txt
 observableSnapshotFilename = observable_solid.txt
+bulkObservableFilenamePattern = {}_solid.txt
 recordingFilename = recording_solid.ramtrj
 observables = numberDensity , inline packingFraction , compressibilityFactor
+bulkObservables = pairDensityCorrelation 5 100 radial
