CMakeLists.txt enhancements, including enable_testing()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,17 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_GLIBCXX_CONCEPT_CHECKS -D_GLIBCXX_DEBUG -D_GLIBCXX_DEBUG_PEDANTIC")
 
+# Check for submodules
 if(NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/Catch2/CMakeLists.txt" OR
         NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/trompeloeil/CMakeLists.txt" OR
         NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/cxxopts/CMakeLists.txt" OR
         NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/ZipIterator/ZipIterator.hpp")
-    message(FATAL_ERROR "Some submodules are not present. Execute: git submodule update --init --recursive")
+    if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/.git)
+        message(FATAL_ERROR "Some submodules are not present. Execute: git submodule update --init")
+    else()
+        message(FATAL_ERROR "This is not a git repository. Clone it from a repo using \n"
+                            "git clone https://github.com/PKua007/rampack.git --recursive")
+    endif()
 endif()
 
 find_package(OpenMP)
@@ -19,12 +25,24 @@ if(OpenMP_CXX_FOUND)
     link_libraries(OpenMP::OpenMP_CXX)
 endif()
 
+if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE Release)
+    message(STATUS "No CMAKE_BUILD_TYPE specified; using Release. Use -DCMAKE_BUILD_TYPE=... to specify it manually")
+endif()
+
+# Explicitly link filesystem library for older versions of GCC
 link_libraries(stdc++fs)
 
+# Allow overriding CMake options with set() and turn off tests for cxxopts
+set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
+set(CXXOPTS_BUILD_TESTS OFF)
+
 # Now we can safely add submodule subdirectories
-add_subdirectory(extern/Catch2)
-add_subdirectory(extern/trompeloeil)
-add_subdirectory(extern/cxxopts)
+add_subdirectory(extern/Catch2 EXCLUDE_FROM_ALL)
+add_subdirectory(extern/trompeloeil EXCLUDE_FROM_ALL)
+add_subdirectory(extern/cxxopts EXCLUDE_FROM_ALL)
 
 add_subdirectory(src)
 add_subdirectory(test)
+
+enable_testing()
