enable_testing() placement fix

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,5 +13,6 @@ add_executable(valid_tests TestMain.cpp ${valid_tests_sources})
 target_link_libraries(valid_tests PRIVATE rampack_lib Catch2::Catch2 trompeloeil)
 target_include_directories(valid_tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
+enable_testing()
 add_test(NAME unit_tests COMMAND $<TARGET_FILE:unit_tests>)
 add_test(NAME valid_tests COMMAND $<TARGET_FILE:valid_tests>)
