Verbose ctest output and build passing bagde

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,5 +27,5 @@ jobs:
 
     - name: Test
       working-directory: ${{github.workspace}}/build/test
-      run: ctest -C ${{env.BUILD_TYPE}}
+      run: ctest -C ${{env.BUILD_TYPE}} --verbose
       
